--- a/movieapp/package.json
+++ b/movieapp/package.json
@@ -20,13 +20,13 @@
     "@angular/router": "~12.1.0-",
     "bootstrap": "^5.0.2",
     "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.3",
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
+    "@angular/localize": "^12.1.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
@@ -35,6 +35,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "tslib": "^2.4.1",
     "typescript": "~4.3.2"
   }
 }
